add package executable to config
According to docs, this is needed in order to expose the packages executable:
https://dart.dev/tools/pub/cmd/pub-global#configuring-package-executables

This is fixing the error:
command not found: svg_to_paint

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+executables:
+  svg_to_paint:
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
